# pytest-examples

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
pytest_examples/: __init__.py  divide.py  mpl_example.py  shapes.py
pytestexamples/: divide.py  mpl_example.py  shapes.py
tests/: conftest.py  test_divide.py  test_mpl_example.py  test_shapes.py
